<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewCircle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:text="@string/_0"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/click_to_decrease"
            android:textAlignment="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonClick"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hapticFeedbackEnabled="true"
            android:text="@string/click_button_text" />
    </LinearLayout>
</ScrollView>